--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ h3 {
   border-radius: 5px;
   padding: 1rem 1rem 2rem;
   background-color: #fff;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 1px 1px -1px rgba(0,0,0,.15), 0 1px 2px 0 rgba(0,0,0,.1), 0 1px 4px 0 rgba(0,0,0,.1);
 }
 
 .big-section-wrap {
@@ -118,7 +118,7 @@ h3 {
   box-sizing: border-box;
   border-radius: 5px;
   padding: 1.5rem 1.5rem 2.5rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 1px 1px -1px rgba(0,0,0,.15), 0 1px 2px 0 rgba(0,0,0,.1), 0 1px 4px 0 rgba(0,0,0,.1);
 }
 
 .big-section {
@@ -133,7 +133,7 @@ h3 {
   background-color: #fff;
   border-radius: 5px;
   padding: 0.5rem 0.5rem 2rem 0.5rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 1px 1px -1px rgba(0,0,0,.15), 0 1px 2px 0 rgba(0,0,0,.1), 0 1px 4px 0 rgba(0,0,0,.1);
 }
 
 .image-smaller {
